--- a/Grading/lab-03.html
+++ b/Grading/lab-03.html
@@ -5,72 +5,60 @@
   </head>
   <body>
     <h1>Lab 03 - Graded Solution</h1>
-    <p><b>You scored 80% = 2.4000000000000004 points for this lab.</b></p>
+    <p><b>You scored 100% = 3.0 points for this lab.</b></p>
     <ul>
       <li><b>Sort ints</b>
       <ul>
       <li>Grade Percentage: 6</li>
-      <li>Your solution succeeded taking 0.121 sec</Li>
+      <li>Your solution succeeded taking 0.134 sec</Li>
       </ul>
       </li>
       <li><b>Sort strings based on their last character</b>
       <ul>
       <li>Grade Percentage: 6</li>
-      <li>Your solution succeeded taking 0.124 sec</Li>
+      <li>Your solution succeeded taking 0.117 sec</Li>
       </ul>
       </li>
       <li><b>Sort students on their GPA</b>
       <ul>
       <li>Grade Percentage: 6</li>
-      <li>Your solution succeeded taking 0.120 sec</Li>
+      <li>Your solution succeeded taking 0.131 sec</Li>
       </ul>
       </li>
       <li><b>Binary search for ints</b>
       <ul>
       <li>Grade Percentage: 6</li>
-      <li>Your solution succeeded taking 0.123 sec</Li>
+      <li>Your solution succeeded taking 0.158 sec</Li>
       </ul>
       </li>
       <li><b>Binary search for students by GPA</b>
       <ul>
       <li>Grade Percentage: 6</li>
-      <li>Your solution succeeded taking 0.123 sec</Li>
+      <li>Your solution succeeded taking 0.148 sec</Li>
       </ul>
       </li>
       <li><b>Search for substrings in hello world</b>
       <ul>
       <li>Grade Percentage: 15</li>
-      <li>Your solution succeeded taking 0.120 sec</Li>
+      <li>Your solution succeeded taking 0.150 sec</Li>
       </ul>
       </li>
       <li><b>Search for substrings in Moby Dick</b>
       <ul>
       <li>Grade Percentage: 15</li>
-      <li>Your solution succeeded taking 1.435 sec</Li>
+      <li>Your solution succeeded taking 1.274 sec</Li>
       </ul>
       </li>
       <li><b>Search for substrings in hello world using suffix array</b>
       <ul>
       <li>Grade Percentage: 20</li>
-      <li>Your solution succeeded taking 0.117 sec</Li>
+      <li>Your solution succeeded taking 0.116 sec</Li>
       </ul>
       </li>
       <li><b>Search for substrings in Moby Dick using suffix array</b>
       <ul>
       <li>Grade Percentage: 20</li>
-      <li>Your solution failed this test case! taking 2.755 sec</Li>
-<li><pre>AssertionError: Expected true</pre></li>
-<li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
-    test_function(
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 48, in wrapper
-    result = test_function(module, *args, **kwargs)
-  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmpow10tjvg/lab03-test.py", line 105, in test3_2
-    assertTrue(s.contains("Moby Dick"))
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/assertions.py", line 60, in assertTrue
-    raise AssertionError(template)
-AssertionError: Expected true
-</pre></li>
+      <li>Your solution succeeded taking 2.474 sec</Li>
       </ul>
       </li>
     </ul>
